# NextCommunity.github.io

./: .eleventy.js  .firebaserc  .gitattributes  .gitignore  .gitpod.yml  .markdown-link-check.json  .markdownlint.yaml  .npmrc  .pre-commit-config-audit.yaml  .pre-commit-config.yaml  404.md  CNAME  Gemfile  README.md  _config.yml  about.md  biome.json  blog.md  codespell.txt  draft.md  firebase.json  gunwixor  index.html  index.md  jest.config.js  network.md  open-source.md  package-lock.json  package.json  pyproject.toml  santa0103.yaml  tailwind.config.js  vitest.config.js
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
_includes/: comments.html  footer.html  social-metatags.html
_layouts/: default.html  home.html  network.md  page.html  post.html
_networks/: 0xMRTT.md  Anderson.md  Barrerson.md  Ephraim.md  GabrielTheophilo.md  Hammed Olawale.md  HammedBabatunde.md  HunainAnis.md  IgbinosaIwinosa.md  JayantGoel001.md  Majalian  MaxCkett.md  MaxianEdison.md  MichaelHinrichs.md  MutanPlex.md  NeuroPeakX.md  NimishKashyap,md  NimishKashyap.md  OrionFable.md  SushantAdh07.md  TheGuyDangerous.md  TinotendaMhedziso.md  abd-ar  abd-ar.md  abdorah.md  ajakov.md  alifiroozidev.md  anekenonso.md  anufdo  anufdo.md  ayush.md  basalumutgazi.md  basemax.md  codingSpecies.md  enimiste.md  eugene4545.md  gakramx.md  gunwixor.md  hariketsheth.md  iabdr.md  (+31 more)
_posts/: 2020-10-01-hello.md  2021-06-14-automate-telegram-program-python.md  2021-06-14-automate-telegram-pyrogram-python.md  2021-06-14-static-website-using-github-jeykll.md
_site/: 404.html  CNAME  index.html  (+1 more)
(+156 files in other folders)
