# -----------------------------------------------------------------------------
# Root pyproject.toml used only for documentation & dev dependency management.
# This is NOT a distributable Python package. Do not publish this meta project.
# -----------------------------------------------------------------------------
[project]
name = "nextcommunity-monorepo-meta"
version = "0.0.0"
description = "Internal meta project for Next Community documentation and development tooling (not published)"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "prek>=0.4.3"
]
